# rumble

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASING.md  architecture-revision.md  codec overhault plan.md  docker-compose.yml  implementation-plan.md  issue_list.md  notes.md  plan-minimumViableImplementation.prompt.md  rumble-server.toml  rustfmt.toml
crates/api/: Cargo.toml  build.rs
crates/api/proto/: api.proto
crates/api/src/: lib.rs  permissions.rs  types.rs
crates/backend/: Cargo.toml
crates/backend/src/: audio.rs  audio_dump.rs  audio_task.rs  bounded_voice.rs  cert_verifier.rs  codec.rs  events.rs  handle.rs  lib.rs  rpc.rs  sfx.rs  synth.rs  torrent.rs
crates/egui-test/: Cargo.toml
crates/egui-test/src/: app.rs  harness.rs  hotkeys.rs  key_manager.rs  lib.rs  main.rs  portal_hotkeys.rs  rpc_client.rs  settings.rs  toasts.rs
crates/egui-test/tests/: hotkey_tests.rs
crates/harness-cli/: Cargo.toml  README.md
crates/harness-cli/src/: daemon.rs  main.rs  protocol.rs  renderer.rs
crates/mumble-bridge/: Cargo.toml  build.rs
crates/mumble-bridge/proto/: Mumble.proto
crates/mumble-bridge/src/: bridge.rs  config.rs  identity.rs  lib.rs  main.rs  mumble_framing.rs  mumble_proto.rs  mumble_server.rs  mumble_tls.rs  mumble_voice.rs  reconcile.rs  rumble_client.rs  state.rs
crates/rumble-admin-web/: Cargo.toml  index.html
crates/rumble-admin-web/src/: api.rs  app.rs  inbox.rs  lib.rs
crates/rumble-aetna/: Cargo.toml  build.rs
crates/rumble-aetna/benches/: projection.rs
crates/rumble-aetna/goldens/: rumble_add_server_modal.draw_ops.txt  rumble_connected.draw_ops.txt  rumble_connected_image_preview.draw_ops.txt  rumble_connected_self_talking.draw_ops.txt  rumble_connecting.draw_ops.txt  rumble_connection_lost.draw_ops.txt  rumble_disconnected_empty.draw_ops.txt  rumble_edit_server_modal.draw_ops.txt  rumble_elevate_prompt.draw_ops.txt  rumble_file_share_failed.draw_ops.txt  rumble_file_share_pending.draw_ops.txt  rumble_file_share_pending.lint.txt  rumble_image_lightbox.draw_ops.txt  rumble_image_lightbox_zoomed.draw_ops.txt  rumble_room_acl_modal.draw_ops.txt  rumble_settings_about.draw_ops.txt  rumble_settings_admin.draw_ops.txt  rumble_settings_chat.draw_ops.txt  rumble_settings_connection_elevated.draw_ops.txt  rumble_settings_connection_local_key.draw_ops.txt  rumble_settings_connection_ssh_agent.draw_ops.txt  rumble_settings_connection_sudo.draw_ops.txt  rumble_settings_devices.draw_ops.txt  rumble_settings_files.draw_ops.txt  rumble_settings_shortcuts.draw_ops.txt  rumble_settings_sounds.draw_ops.txt  rumble_toolbar_voice_mode_open.draw_ops.txt  rumble_unlock_prompt.draw_ops.txt  rumble_wizard_generate_local.draw_ops.txt
crates/rumble-aetna/src/: admin.rs  animated_gpu.rs  app.rs  backend.rs  chat.rs  elevate.rs  identity.rs  lib.rs  main.rs  media_cache.rs  room_acl.rs  room_tree.rs  server_picker.rs  settings.rs  theme.rs  video.rs  wizard.rs
crates/rumble-client/: Cargo.toml
crates/rumble-client-traits/: Cargo.toml
crates/rumble-client-traits/src/: audio.rs  auth.rs  codec.rs  file_transfer.rs  keys.rs  lib.rs  platform.rs  test_audio.rs  transport.rs
crates/rumble-client/benches/: audio_pipeline.rs  rx_audio.rs
crates/rumble-client/src/: audio.rs  audio_dump.rs  audio_task.rs  auth.rs  codec.rs  domain_events.rs  events.rs  file_transfer.rs  handle.rs  lib.rs  meter.rs  preroll.rs  projection.rs  rpc.rs  sfx.rs  snapshot.rs  synth.rs  transport.rs
crates/rumble-damascene/: Cargo.toml  build.rs
crates/rumble-damascene/benches/: chat_images.rs  projection.rs
crates/rumble-damascene/goldens/: rumble_add_server_modal.draw_ops.txt  rumble_cert_pending.draw_ops.txt  rumble_connected.draw_ops.txt  rumble_connected.lint.txt  rumble_connected_audio_fault.draw_ops.txt  rumble_connected_audio_fault.lint.txt  rumble_connected_image_preview.draw_ops.txt  rumble_connected_image_preview.lint.txt  rumble_connected_model_preview.draw_ops.txt  rumble_connected_model_preview.lint.txt  rumble_connected_self_talking.draw_ops.txt  rumble_connected_self_talking.lint.txt  rumble_connected_slash_command_highlighted.draw_ops.txt  rumble_connected_slash_command_highlighted.lint.txt  rumble_connected_slash_commands.draw_ops.txt  rumble_connected_slash_commands.lint.txt  rumble_connected_user_states.draw_ops.txt  rumble_connecting.draw_ops.txt  rumble_connection_lost.draw_ops.txt  rumble_disconnected.draw_ops.txt  rumble_disconnected_empty.draw_ops.txt  rumble_edit_server_modal.draw_ops.txt  rumble_elevate_prompt.draw_ops.txt  rumble_elevate_prompt.lint.txt  rumble_file_share_failed.draw_ops.txt  rumble_file_share_failed.lint.txt  rumble_file_share_pending.draw_ops.txt  rumble_file_share_pending.lint.txt  rumble_image_lightbox.draw_ops.txt  rumble_image_lightbox_zoomed.draw_ops.txt  rumble_image_lightbox_zoomed.lint.txt  rumble_model_lightbox.draw_ops.txt  rumble_model_lightbox.lint.txt  rumble_room_acl_modal.draw_ops.txt  rumble_settings_about.draw_ops.txt  rumble_settings_admin.draw_ops.txt  rumble_settings_admin.lint.txt  rumble_settings_chat.draw_ops.txt  rumble_settings_chat.lint.txt  rumble_settings_connection.draw_ops.txt  (+28 more)
crates/rumble-damascene/src/: admin.rs  animated_gpu.rs  app.rs  backend.rs  chat.rs  elevate.rs  identity.rs  lib.rs  lightbox.rs  main.rs  media_cache.rs  model.rs  password_input.rs  room_acl.rs  room_tree.rs  server_picker.rs  settings.rs  sfx.rs  theme.rs  video.rs  wizard.rs
crates/rumble-desktop/: Cargo.toml
crates/rumble-desktop-shell/: Cargo.toml
crates/rumble-desktop-shell/src/: lib.rs  settings.rs
crates/rumble-desktop/benches/: opus_codec.rs
crates/rumble-desktop/src/: cert_verifier.rs  codec.rs  file_transfer_relay.rs  lib.rs  transport.rs
crates/rumble-desktop/tests/: live_mic.rs
crates/rumble-egui/: Cargo.toml
crates/rumble-native/: Cargo.toml
crates/rumble-next/: Cargo.toml
crates/rumble-protocol/: Cargo.toml
crates/rumble-video/: Cargo.toml  build.rs
crates/rumble-web-types/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: acl.rs  (+15 more)
(+147 files in other folders)
