[workspace]
resolver = "3"
members = [
    "crates/*",
    "xtask",
]
exclude = [
    "docker/p2p-test",
    "docker/backend-p2p-test",
    # Vendored UI library — has its own workspace.
    "vendor/aetna",
]

[workspace.dependencies]
# Crypto. Stay pinned to the pre-release versions we already use across
# the workspace; bumping these is its own coordinated change.
ed25519-dalek = { version = "3.0.0-pre.4", features = ["rand_core"] }
rand = "0.10.0-rc.3"
rand_core = "0.10.0-rc.3"

# Aetna UI library — pinned by git rev to upstream computer-whisperer/aetna.
# Override locally with `[patch."https://github.com/computer-whisperer/aetna"]`
# (or `scripts/aetna-local.sh`) if iterating on aetna alongside rumble.
aetna-core = { git = "https://github.com/computer-whisperer/aetna", rev = "ebc825ca731e859f67adf57a27a41855df70a6cd" }
aetna-markdown = { git = "https://github.com/computer-whisperer/aetna", rev = "ebc825ca731e859f67adf57a27a41855df70a6cd" }
aetna-wgpu = { git = "https://github.com/computer-whisperer/aetna", rev = "ebc825ca731e859f67adf57a27a41855df70a6cd" }
aetna-winit-wgpu = { git = "https://github.com/computer-whisperer/aetna", rev = "ebc825ca731e859f67adf57a27a41855df70a6cd" }

# Shared third-party deps. Per-crate feature picks live at each consumer
# so the workspace stays neutral about what each crate actually uses;
# cargo unions feature sets across consumers regardless. Major-version
# bumps that would ripple through the codebase (sha2 0.11, bincode 3,
# toml 1, bytesize 2, bcrypt 0.19, global-hotkey 0.8) are intentionally
# left at the older line — bump them in dedicated commits.
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
bitflags = "2"
blake3 = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
dashmap = "6.1"
directories = "6.0"
eframe = "0.33.3"
hex = "0.4"
prost = "0.14"
prost-build = "0.14"
# default-features = false on the workspace lines below is intentional:
# some consumers disable defaults (server/bridge for rcgen, bridge for
# rustls), and cargo rejects a `default-features = false` override on
# the consumer side once the workspace declares `true`. Consumers that
# want defaults re-enable them explicitly.
quinn = { version = "0.11", default-features = false }
rcgen = { version = "0.14", default-features = false }
rustls = { version = "0.23", default-features = false }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
thiserror = "2"
tokio = "1"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
urlencoding = "2"
uuid = { version = "1.19", features = ["v4"] }
webpki-roots = "1"
wgpu = "29"

# Local fork of egui 0.33.3 with a small hit_test fix: also filter
# NaN out of `WidgetRect.rect` (not just `interact_rect`). egui's
# upstream filter only checks `interact_rect`, but `WidgetRect` derives
# `PartialEq` over every field — so a NaN in `rect` makes
# `position(...).unwrap()` at hit_test.rs:364 panic. See
# https://github.com/emilk/egui/issues/7870 (still open as of writing).
# Drop this block when the upstream fix lands.
[patch.crates-io]
egui = { git = "https://github.com/u6bkep/egui.git", branch = "rumble-fix-hit-test-nan-rect" }
emath = { git = "https://github.com/u6bkep/egui.git", branch = "rumble-fix-hit-test-nan-rect" }
epaint = { git = "https://github.com/u6bkep/egui.git", branch = "rumble-fix-hit-test-nan-rect" }
epaint_default_fonts = { git = "https://github.com/u6bkep/egui.git", branch = "rumble-fix-hit-test-nan-rect" }
ecolor = { git = "https://github.com/u6bkep/egui.git", branch = "rumble-fix-hit-test-nan-rect" }
eframe = { git = "https://github.com/u6bkep/egui.git", branch = "rumble-fix-hit-test-nan-rect" }
egui-winit = { git = "https://github.com/u6bkep/egui.git", branch = "rumble-fix-hit-test-nan-rect" }
egui_extras = { git = "https://github.com/u6bkep/egui.git", branch = "rumble-fix-hit-test-nan-rect" }
egui_glow = { git = "https://github.com/u6bkep/egui.git", branch = "rumble-fix-hit-test-nan-rect" }
egui-wgpu = { git = "https://github.com/u6bkep/egui.git", branch = "rumble-fix-hit-test-nan-rect" }
egui_kittest = { git = "https://github.com/u6bkep/egui.git", branch = "rumble-fix-hit-test-nan-rect" }

# Optimize MSDF-generation crates in dev builds. aetna's
# `Runner::warm_default_glyphs` pre-rasterizes printable ASCII for
# Inter + JetBrains Mono at startup using `fdsm` (pure-Rust MSDF
# generator) over `nalgebra` / `image` numerics. Unoptimized, those
# ~190 glyphs take ~20s and dominate aetna-app launch time; with -O3
# on just these leaves it drops to ~0.9s. Application crates stay
# unoptimized, so debug/edit-compile cycles are unaffected.
[profile.dev.package.fdsm]
opt-level = 3
[profile.dev.package.fdsm-ttf-parser]
opt-level = 3
[profile.dev.package.nalgebra]
opt-level = 3
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.ttf-parser]
opt-level = 3