[workspace]
resolver = "3"
members = [
    "crates/*",
    "xtask",
]
# `default-members` and `members` are currently identical — every crate
# under `crates/` is part of the active build. The split is kept so a
# future reference-only or experimental crate can be added to `members`
# without being pulled into the default `cargo build` / `cargo test`.
default-members = [
    "crates/mumble-bridge",
    "crates/rumble-damascene",
    "crates/rumble-audio",
    "crates/rumble-client",
    "crates/rumble-client-traits",
    "crates/rumble-desktop",
    "crates/rumble-desktop-shell",
    "crates/rumble-protocol",
    "crates/rumble-video",
    "crates/rumble-web-types",
    "crates/server",
    "xtask",
]
exclude = [
    "docker/p2p-test",
    "docker/backend-p2p-test",
    # Vendored UI library — has its own workspace.
    "vendor/damascene",
]

[workspace.dependencies]
# Crypto. Stay pinned to the pre-release versions we already use across
# the workspace; bumping these is its own coordinated change.
ed25519-dalek = { version = "3.0.0-pre.4", features = ["rand_core"] }
rand = "0.10.0-rc.3"

# Damascene UI library (formerly aetna) — pinned by git rev to upstream
# computer-whisperer/damascene. Override locally with
# `[patch."https://github.com/computer-whisperer/damascene"]` (or
# `scripts/damascene-local.sh`) if iterating on damascene alongside rumble.
damascene-core = { git = "https://github.com/computer-whisperer/damascene", rev = "e4ec29d9f74498e1142c29390b40ac94d0937c5a" }
damascene-markdown = { git = "https://github.com/computer-whisperer/damascene", rev = "e4ec29d9f74498e1142c29390b40ac94d0937c5a" }
damascene-wgpu = { git = "https://github.com/computer-whisperer/damascene", rev = "e4ec29d9f74498e1142c29390b40ac94d0937c5a" }
damascene-winit-wgpu = { git = "https://github.com/computer-whisperer/damascene", rev = "e4ec29d9f74498e1142c29390b40ac94d0937c5a" }

# Shared third-party deps. Per-crate feature picks live at each consumer
# so the workspace stays neutral about what each crate actually uses;
# cargo unions feature sets across consumers regardless. Major-version
# bumps that would ripple through the codebase are intentionally left
# at the older line — bump them in dedicated commits. Currently held
# back: bincode 3 (sled on-disk format compatibility).
anyhow = "1"
arc-swap = "1"
async-trait = "0.1"
base64 = "0.22"
bitflags = "2"
blake3 = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
dashmap = "6.1"
directories = "6.0"
hex = "0.4"
prost = "0.14"
prost-build = "0.14"
# default-features = false on the workspace lines below is intentional:
# some consumers disable defaults (server/bridge for rcgen, bridge for
# rustls), and cargo rejects a `default-features = false` override on
# the consumer side once the workspace declares `true`. Consumers that
# want defaults re-enable them explicitly.
quinn = { version = "0.11", default-features = false }
rcgen = { version = "0.14", default-features = false }
rustls = { version = "0.23", default-features = false }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.11"
thiserror = "2"
tokio = "1"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1.19", features = ["v4"] }
webpki-roots = "1"
wgpu = "29"

# Optimize MSDF-generation crates in dev builds. damascene's
# `Runner::warm_default_glyphs` pre-rasterizes printable ASCII for
# Inter + JetBrains Mono at startup using `fdsm` (pure-Rust MSDF
# generator) over `nalgebra` / `image` numerics. Unoptimized, those
# ~190 glyphs take ~20s and dominate damascene-app launch time; with -O3
# on just these leaves it drops to ~0.9s. Application crates stay
# unoptimized, so debug/edit-compile cycles are unaffected.
[profile.dev.package.fdsm]
opt-level = 3
[profile.dev.package.fdsm-ttf-parser]
opt-level = 3
[profile.dev.package.nalgebra]
opt-level = 3
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.ttf-parser]
opt-level = 3