[package]
name = "api"
version = "0.1.0"
edition = "2024"

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
bitflags = "2"
prost = "0.14"
prost-types = "0.14"
bytes = "1"
blake3 = "1"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
sha2 = "0.10"
ed25519-dalek = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pipeline = { path = "../pipeline" }
hex = "0.4"
urlencoding = "2"

[build-dependencies]
prost-build = "0.14"
