[package]
name = "backend"
description = "Rumble client backend library"
version = "0.1.0"
edition = "2024"

[features]
default = []
p2p = []

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "io-util", "net"] }
quinn = { version = "0.11", default-features = false, features = ["rustls-aws-lc-rs", "bloom", "log", "platform-verifier", "runtime-tokio"] }
anyhow = "1"
bytes = "1"
api = { path = "../api" }
pipeline = { path = "../pipeline" }
rumble-client = { path = "../rumble-client" }
rumble-native = { path = "../rumble-native" }
prost = "0.14"
rustls = { version = "0.23", default-features = true, features = [] }
rustls-pemfile = "2"
webpki-roots = "1.0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4"] }
nnnoiseless = { version = "0.5.2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.7"
sha2 = "0.10"
ed25519-dalek = { workspace = true }
hex = "0.4"
urlencoding = "2"
rand = { workspace = true }
rand_core = { workspace = true }
open = "5"
libp2p = { version = "0.52", features = ["tcp", "tokio", "dns", "noise", "yamux", "ping", "identify", "relay", "request-response", "dcutr", "macros"] }
async-trait = "0.1"
blake3 = "1"
futures = "0.3"

[dev-dependencies]
tempfile = "3"