[package]
name = "egui-test"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
# egui = "0.33.2"
egui_extras = { version = "0.33.3", features = ["image"] }
egui_ltreeview = { version = "0.6.0", features = [] }
env_logger = { version = "0.11.8", features = ["auto-color", "humantime"] }
uuid = { version = "1.18.1", features = ["v4"] }
backend = { path = "../backend" }
api = { path = "../api" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0"
log = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
argon2 = "0.5"
chacha20poly1305 = "0.10"
anyhow = "1.0"
ssh-agent-lib = "0.5"
ssh-key = { version = "0.6", features = ["ed25519"] }
service-binding = "2.1"
base64 = "0.22"
