[package]
name = "egui-test"
version = "0.1.0"
edition = "2024"

[lib]
name = "egui_test"
path = "src/lib.rs"

[[bin]]
name = "egui-test"
path = "src/main.rs"

[features]
default = []
test-harness = ["dep:egui_kittest"]

[dependencies]
eframe = "0.33.3"
# egui = "0.33.2"
egui_extras = { version = "0.33.3", features = ["image"] }
egui_ltreeview = { git = "https://github.com/u6bkep/egui_ltreeview.git", branch = "main" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }
backend = { path = "../backend" }
api = { path = "../api" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0"
ed25519-dalek = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
hex = "0.4"
sha2 = "0.10"
getrandom = "0.3"
argon2 = "0.5"
chacha20poly1305 = "0.10"
anyhow = "1.0"
ssh-agent-lib = "0.5"
ssh-key = { version = "0.6", features = ["ed25519"] }
service-binding = "3.0"
rfd = "0.16"
base64 = "0.22"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["avif", "bmp", "dds", "ff", "gif", "hdr", "ico", "jpeg", "png", "pnm", "qoi", "tga", "tiff", "webp"] }
tempfile = "3"
global-hotkey = "0.7"

# XDG Desktop Portal for Wayland global shortcuts
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.12", default-features = false, features = ["tokio"] }
futures-util = "0.3"

# Optional test harness dependencies
egui_kittest = { version = "0.33", features = ["wgpu", "snapshot"], optional = true }
