[package]
name = "harness-cli"
version = "0.1.0"
edition = "2024"
description = "CLI daemon for automated GUI testing of Rumble"

[[bin]]
name = "rumble-harness"
path = "src/main.rs"

[dependencies]
# Core dependencies
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "io-util", "fs", "signal"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# egui rendering
eframe = { version = "0.33.3", default-features = false }
egui_kittest = { version = "0.33.3", features = ["wgpu"] }
image = { version = "0.25", default-features = false, features = ["png"] }

# Project crates
rumble-egui = { path = "../rumble-egui" }
rumble-desktop-shell = { path = "../rumble-desktop-shell" }
server = { path = "../server" }
rumble-client = { path = "../rumble-client" }
rumble-protocol = { path = "../rumble-protocol" }

# For generating self-signed certs
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rcgen = "0.13"

# Utility
hex = "0.4"
