[package]
name = "mumble-bridge"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mumble-bridge"
path = "src/main.rs"

[dependencies]
rumble-protocol = { path = "../rumble-protocol" }
rumble-client-traits = { path = "../rumble-client-traits" }
# The bridge is a server-side daemon; it uses rumble-desktop only for the QUIC
# transport pieces and never opens audio devices. Disable default features to
# drop the libpulse runtime dep — keeps the docker image tiny.
rumble-desktop = { path = "../rumble-desktop", default-features = false }
tokio = { version = "1", features = ["full"] }
prost = "0.14"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
rcgen = "0.13"
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
dashmap = "6"
bytes = "1"
hex = "0.4"

[build-dependencies]
prost-build = "0.14"
