[package]
name = "mumble-bridge"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mumble-bridge"
path = "src/main.rs"

[dependencies]
rumble-protocol = { path = "../rumble-protocol" }
rumble-client-traits = { path = "../rumble-client-traits" }
# The bridge is a server-side daemon; it uses rumble-desktop only for the QUIC
# transport pieces and never opens audio devices. Disable default features to
# drop the libpulse runtime dep — keeps the docker image tiny.
rumble-desktop = { path = "../rumble-desktop", default-features = false }
tokio = { workspace = true, features = ["full"] }
prost = { workspace = true }
rustls = { workspace = true, features = ["aws-lc-rs"] }
rcgen = { workspace = true, default-features = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs"] }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
