[package]
name = "rumble-aetna"
version = "0.1.0"
edition = "2024"
description = "Rumble client built on the aetna UI library"

[lib]
name = "rumble_aetna"
path = "src/lib.rs"

[[bin]]
name = "rumble-aetna"
path = "src/main.rs"

[dependencies]
# Aetna UI — vendored under vendor/aetna.
aetna-core = { path = "../../vendor/aetna/crates/aetna-core" }
aetna-winit-wgpu = { path = "../../vendor/aetna/crates/aetna-winit-wgpu" }
aetna-wgpu = { path = "../../vendor/aetna/crates/aetna-wgpu" }
wgpu = "29"

# Rumble client backend.
rumble-client = { path = "../rumble-client" }
rumble-client-traits = { path = "../rumble-client-traits" }
rumble-desktop = { path = "../rumble-desktop" }
rumble-desktop-shell = { path = "../rumble-desktop-shell" }
rumble-protocol = { path = "../rumble-protocol" }

ed25519-dalek = { workspace = true }
rand = { workspace = true }

serde_json = "1.0"
uuid = { version = "1.18.1", features = ["v4"] }
directories = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
rfd = "0.16"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "tiff", "webp"] }
arboard = "3"
tempfile = "3"
