[package]
name = "rumble-aetna"
version = "0.1.1"
edition = "2024"
description = "Rumble client built on the aetna UI library"
default-run = "rumble-aetna"

[lib]
name = "rumble_aetna"
path = "src/lib.rs"

[[bin]]
name = "rumble-aetna"
path = "src/main.rs"

[dependencies]
# Aetna UI. Pin lives in the workspace [workspace.dependencies] block.
aetna-core = { workspace = true }
aetna-winit-wgpu = { workspace = true }
aetna-wgpu = { workspace = true }
wgpu = { workspace = true }

# Rumble client backend.
rumble-client = { path = "../rumble-client" }
rumble-client-traits = { path = "../rumble-client-traits" }
rumble-desktop = { path = "../rumble-desktop" }
rumble-desktop-shell = { path = "../rumble-desktop-shell" }
rumble-protocol = { path = "../rumble-protocol" }
rumble-video = { path = "../rumble-video" }

ed25519-dalek = { workspace = true }
rand = { workspace = true }

serde_json = { workspace = true }
uuid = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
anyhow = { workspace = true }
rfd = "0.17"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "tiff", "webp"] }
arboard = "3"
tempfile = "3"
base64 = { workspace = true }

# Platform-conditional feature opt-ins. Linux-only PulseAudio output
# (rumble-desktop::pulse) + XDG GlobalShortcuts portal
# (rumble-desktop-shell::wayland-portal) are gated to Linux builds.
# Splitting these out of the crates' `default` features keeps non-Linux
# builds from depending on cargo silently dropping feature references
# to target-gated optional deps.
[target.'cfg(target_os = "linux")'.dependencies]
rumble-desktop = { path = "../rumble-desktop", features = ["pulse"] }
rumble-desktop-shell = { path = "../rumble-desktop-shell", features = ["wayland-portal"] }

