[package]
name = "rumble-client-traits"
description = "Platform-agnostic Rumble client library"
version = "0.1.0"
edition = "2024"

[dependencies]
rumble-protocol = { path = "../rumble-protocol" }
rumble-audio = { path = "../rumble-audio" }
anyhow = { workspace = true }
async-trait = { workspace = true }
prost = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
