[package]
name = "rumble-client"
description = "Rumble client backend library"
version = "0.1.0"
edition = "2024"

# Disable the default libtest bench harness so `cargo bench -p rumble-client`
# dispatches only to the criterion bench (libtest rejects --save-baseline etc).
[lib]
bench = false

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "io-util", "net", "sync", "fs"] }
anyhow = { workspace = true }
arc-swap = { workspace = true }
bytes = { workspace = true }
rumble-protocol = { path = "../rumble-protocol" }
rumble-audio = { path = "../rumble-audio" }
rumble-client-traits = { path = "../rumble-client-traits" }
prost = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
nnnoiseless = { version = "0.5.2", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }

[[bench]]
name = "audio_pipeline"
harness = false

[[bench]]
name = "rx_audio"
harness = false
