[package]
name = "rumble-client"
description = "Rumble client backend library"
version = "0.4.0"
edition = "2024"
license = "MIT"

# Disable the default libtest bench harness so `cargo bench -p rumble-client`
# dispatches only to the criterion bench (libtest rejects --save-baseline etc).
[lib]
bench = false

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "io-util", "net", "sync", "fs"] }
anyhow = { workspace = true }
arc-swap = { workspace = true }
bytes = { workspace = true }
rumble-protocol = { path = "../rumble-protocol" }
rumble-audio = { path = "../rumble-audio" }
rumble-client-traits = { path = "../rumble-client-traits" }
prost = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
nnnoiseless = { version = "0.5.2", default-features = false }
# Lock-free SPSC ring for the playback hand-off: the audio-task thread is the
# sole producer (mix tick), the device callback the sole consumer. Keeps the
# real-time output callback off a general-purpose Mutex. Its only dependency,
# crossbeam-utils, is already in the tree.
rtrb = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }
# The real Opus codec lives in the desktop platform crate. rumble-desktop depends
# only on rumble-client-traits/-protocol (NOT rumble-client), so this dev-only
# edge is acyclic. Used by the RX onset-pop reproduction test in audio_task.rs to
# exercise the jitter buffer against a genuine decoder instead of a marker stub.
rumble-desktop = { path = "../rumble-desktop" }

[[bench]]
name = "audio_pipeline"
harness = false

[[bench]]
name = "rx_audio"
harness = false
